[metadata]
name = compgraph
version = 0.0.01
author=Aleksey Podkidyshev
author_email=podkidyshev.as@phystech.edu
description=Library for graph computation with constant memory consumption
keywords = compgraph
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
